--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,7 @@
 	<modules>
 		<module>spring-boot-helloworld</module>
 		<module>spring-boot-mongdb</module>
+		<module>spring-boot-mybatis</module>
 	</modules>
+	
 </project>
