--- a/spring-boot-mybatis-multidatasource/src/main/resources/application.yml
+++ b/spring-boot-mybatis-multidatasource/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
         maxPoolPreparedStatementPerConnectionSize: 20
         filters: stat,wall,log4j2
       two:
-        url: jdbc:mysql://localhost:3306/test?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
+        url: jdbc:mysql://localhost:3306/test2?serverTimezone=UTC&characterEncoding=utf8&useUnicode=true&useSSL=false
         username: root
         password: root
         driver-class-name: com.mysql.jdbc.Driver
