--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
     <module>spring-boot-dubbo-provider</module>
     <module>spring-boot-dubbo-consumer</module>
     <module>spring-boot-thymeleaf</module>
+    <module>spring-boot-uploadfile</module>
   </modules>
 	
 </project>
