--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <module>spring-boot-dubbo-consumer</module>
     <module>spring-boot-thymeleaf</module>
     <module>spring-boot-uploadfile</module>
+    <module>spring-boot-actuator</module>
   </modules>
 	
 </project>
