--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
     <module>spring-boot-thymeleaf</module>
     <module>spring-boot-uploadfile</module>
     <module>spring-boot-actuator</module>
+    <module>spring-boot-jpa</module>
   </modules>
 	
 </project>
