--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
     <module>spring-boot-actuator</module>
     <module>spring-boot-jpa</module>
     <module>spring-boot-redis</module>
+    <module>spring-boot-activemq</module>
   </modules>
 	
 </project>
