--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
     <module>spring-boot-jpa</module>
     <module>spring-boot-redis</module>
     <module>spring-boot-activemq</module>
+    <module>spring-boot-log4j2</module>
   </modules>
 	
 </project>
