--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.3.RELEASE</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
 
 	<groupId>org.abigfish</groupId>
@@ -50,19 +51,20 @@
 		<module>spring-boot-helloworld</module>
 		<module>spring-boot-mongdb</module>
 		<module>spring-boot-mybatis</module>
-    <module>spring-boot-mybatis-multidatasource</module>
-    <module>spring-boot-scheduler</module>
-    <module>spring-boot-shiro</module>
-    <module>spring-boot-freemarker</module>
-    <module>spring-boot-dubbo-provider</module>
-    <module>spring-boot-dubbo-consumer</module>
-    <module>spring-boot-thymeleaf</module>
-    <module>spring-boot-uploadfile</module>
-    <module>spring-boot-actuator</module>
-    <module>spring-boot-jpa</module>
-    <module>spring-boot-redis</module>
-    <module>spring-boot-activemq</module>
-    <module>spring-boot-log4j2</module>
-  </modules>
-	
+		<module>spring-boot-mybatis-multidatasource</module>
+		<module>spring-boot-scheduler</module>
+		<module>spring-boot-shiro</module>
+		<module>spring-boot-freemarker</module>
+		<module>spring-boot-dubbo-provider</module>
+		<module>spring-boot-dubbo-consumer</module>
+		<module>spring-boot-thymeleaf</module>
+		<module>spring-boot-uploadfile</module>
+		<module>spring-boot-actuator</module>
+		<module>spring-boot-jpa</module>
+		<module>spring-boot-redis</module>
+		<module>spring-boot-activemq</module>
+		<module>spring-boot-log4j2</module>
+		<module>spring-boot-war</module>
+	</modules>
+
 </project>
