--- a/spring-boot-shiro-jwt/pom.xml
+++ b/spring-boot-shiro-jwt/pom.xml
@@ -66,5 +66,17 @@
 			<version>3.4.0</version>
 		</dependency>
 		
+		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
+		
 	</dependencies>
 </project>
