--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
     <module>spring-boot-shiro-jwt</module>
     <module>spring-boot-ibatis</module>
     <module>spring-boot-oauth2-jwt</module>
+    <module>spring-boot-2-oauth2-authorization-jwt</module>
   </modules>
 
 </project>
