--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
     <module>spring-boot-ibatis</module>
     <module>spring-boot-oauth2-jwt</module>
     <module>spring-boot-2-oauth2-authorization-jwt</module>
+    <module>spring-boot-2-oauth2-resource-jwt</module>
   </modules>
 
 </project>
