--- a/spring-boot-2-oauth2-authorization-jwt/pom.xml
+++ b/spring-boot-2-oauth2-authorization-jwt/pom.xml
@@ -64,6 +64,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.2</version>
         </dependency>
+        
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
 	</dependencies>
 	
 	<dependencyManagement>
