--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.3.RELEASE</version>
-		<relativePath/>
+		<relativePath />
 	</parent>
 
 	<groupId>org.abigfish</groupId>
@@ -64,14 +65,15 @@
 		<module>spring-boot-activemq</module>
 		<module>spring-boot-log4j2</module>
 		<module>spring-boot-war</module>
-    <module>spring-boot-ali-nacos</module>
-    <module>spring-boot-shiro-jwt</module>
-    <module>spring-boot-ibatis</module>
-    <module>spring-boot-oauth2-jwt</module>
-    <module>spring-boot-2-oauth2-authorization-jwt</module>
-    <module>spring-boot-2-oauth2-resource-jwt</module>
-    <module>spring-boot-websocket</module>
-    <module>spring-boot-webflux</module>
-  </modules>
+		<module>spring-boot-ali-nacos</module>
+		<module>spring-boot-shiro-jwt</module>
+		<module>spring-boot-ibatis</module>
+		<module>spring-boot-oauth2-jwt</module>
+		<module>spring-boot-2-oauth2-authorization-jwt</module>
+		<module>spring-boot-2-oauth2-resource-jwt</module>
+		<module>spring-boot-websocket</module>
+		<module>spring-boot-webflux</module>
+		<module>spring-boot-1-jediscluster</module>
+	</modules>
 
 </project>
