--- a/spring-boot-2-rediscluster/pom.xml
+++ b/spring-boot-2-rediscluster/pom.xml
@@ -64,5 +64,11 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version><!--$NO-MVN-MAN-VER$ -->
+		</dependency>
 	</dependencies>
 </project>
