--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<modules><module></module></modules><?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -73,8 +73,8 @@
 		<module>spring-boot-websocket</module>
 		<module>spring-boot-webflux</module>
 		<module>spring-boot-1-jediscluster</module>
- 
-	<module></module> <module>spring-boot-2-rediscluster</module>
+		<module>spring-boot-2-rediscluster</module>
+    <module>spring-boot-1-elastic-job</module>
   </modules>
 
 </project>
