--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<modules><module></module></modules><?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -47,7 +47,7 @@
 
 
 	<modules>
-		<module>spring-boot-helloworld</module>
+	<module>spring-boot-helloworld</module>
 		<module>spring-boot-mongdb</module>
 		<module>spring-boot-mybatis</module>
 		<module>spring-boot-mybatis-multidatasource</module>
@@ -74,7 +74,8 @@
 		<module>spring-boot-webflux</module>
 		<module>spring-boot-1-jediscluster</module>
 		<module>spring-boot-2-rediscluster</module>
-    <module>spring-boot-1-elastic-job</module>
+        <module>spring-boot-1-elastic-job</module>
+    <module>spring-boot-rabbitmq</module>
   </modules>
 
 </project>
