--- a/spring-boot-dubbo-consumer/pom.xml
+++ b/spring-boot-dubbo-consumer/pom.xml
@@ -31,25 +31,32 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+     
+		<dependency>
+		<groupId>org.databene</groupId>
+		<artifactId>contiperf</artifactId>
+		<version>2.3.4</version>
+		<scope>test</scope>
+		</dependency>
 
 		<dependency>
-            <groupId>com.alibaba.spring.boot</groupId>
-	<artifactId>dubbo-spring-boot-starter</artifactId>
-	<version>2.0.0</version>
-        </dependency>
-		
+			<groupId>com.alibaba.spring.boot</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
 		<dependency>
-		    <groupId>log4j</groupId>
-		    <artifactId>log4j</artifactId>
-		    <version>1.2.16</version>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
 			<version>0.10</version>
 		</dependency>
-		
+
 	</dependencies>
 </project>
