--- a/spring-boot-2-oauth2-authorization-jwt/pom.xml
+++ b/spring-boot-2-oauth2-authorization-jwt/pom.xml
@@ -38,6 +38,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-security</artifactId>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
