--- a/spring-boot-2-oauth2-authorization-jwt/src/main/resources/application.yml
+++ b/spring-boot-2-oauth2-authorization-jwt/src/main/resources/application.yml
@@ -19,4 +19,21 @@ spring:
       naming:
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
       ddl-auto: validate
+  redis:
+    host: localhost
+    port: 6379
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1s
+        min-idle: 0
+        max-idle: 8
+
+security:
+  oauth2:
+    token:
+      store:
+        type: jwt
+        
+
 check-user-scopes: true
