--- a/spring-boot-2-oauth2-resource-jwt/pom.xml
+++ b/spring-boot-2-oauth2-resource-jwt/pom.xml
@@ -32,10 +32,18 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-oauth2</artifactId>
+			<exclusions>
+			    <exclusion>
+			        <groupId>org.springframework.security.oauth</groupId>
+			        <artifactId>spring-security-oauth2</artifactId>
+			    </exclusion>
+			</exclusions>
 		</dependency>
+		
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-security</artifactId>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>2.3.3.RELEASE</version>
 		</dependency>
 
 		<dependency>
