--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 
 
 	<modules>
-	<module>spring-boot-helloworld</module>
+		<module>spring-boot-helloworld</module>
 		<module>spring-boot-mongdb</module>
 		<module>spring-boot-mybatis</module>
 		<module>spring-boot-mybatis-multidatasource</module>
@@ -74,11 +74,13 @@
 		<module>spring-boot-webflux</module>
 		<module>spring-boot-1-jediscluster</module>
 		<module>spring-boot-2-rediscluster</module>
-        <module>spring-boot-1-elastic-job</module>
-    <module>spring-boot-rabbitmq</module>
-    <module>spring-boot-docker</module>
-    <module></module>  <module>spring-boot-2-nettyserver</module>
-  <module>spring-boot-2-nettyclient</module>
-	</modules>
+		<module>spring-boot-1-elastic-job</module>
+		<module>spring-boot-rabbitmq</module>
+		<module>spring-boot-docker</module>
+		<module>spring-boot-2-nettyserver</module>
+		<module>spring-boot-2-nettyclient</module>
+  
+	<module></module><module>spring-boot-2-websocket</module>
+  </modules>
 
 </project>
