--- a/spring-boot-ai-milvus/src/main/resources/application.properties
+++ b/spring-boot-ai-milvus/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8080
+server.servlet.session.timeout=43200s
 spring.ai.vectorstore.milvus.client.host=192.168.2.220
 spring.ai.vectorstore.milvus.client.port=19530
 spring.ai.vectorstore.milvus.collection-name=vector_store_7
