--- a/spring-boot-ai-mcpserver/pom.xml
+++ b/spring-boot-ai-mcpserver/pom.xml
@@ -1,16 +1,11 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-
 	<groupId>org.abigfish</groupId>
-	<artifactId>spring-boot-ai-ollama</artifactId>
+	<artifactId>spring-boot-ai-mcpserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-ai-ollama</name>
+	<name>spring-boot-ai-mcpserver</name>
 	<url>http://maven.apache.org</url>
-	
-	
 	<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -44,16 +39,9 @@
 	</repositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.ai</groupId>
-			<artifactId>spring-ai-ollama-spring-boot-starter</artifactId>
-			<exclusions>
-			    <exclusion>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>logback-classic</artifactId>
-                 </exclusion>
-            </exclusions>
-			
+	    <dependency>
+		    <groupId>org.springframework.ai</groupId>
+		    <artifactId>spring-ai-starter-mcp-server-webmvc</artifactId>
 		</dependency>
 		<dependency>
 	        <groupId>org.springframework.boot</groupId>
@@ -74,7 +62,7 @@
 			<dependency>
 				<groupId>org.springframework.ai</groupId>
 				<artifactId>spring-ai-bom</artifactId>
-				<version>1.0.0-M6</version>
+				<version>1.0.0-M7</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
