--- a/spring-boot-ai-ollama/src/main/resources/application.properties
+++ b/spring-boot-ai-ollama/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
 spring.ai.ollama.base-url=http://192.168.0.106:11434
-spring.ai.ollama.chat.options.model=llama2-chinese:13b
+spring.ai.ollama.chat.options.model=qwen2.5:14b-instruct-q3_K_M
 spring.ai.ollama.chat.options.temperature=0.7
-spring.ai.ollama.embedding.options.model=llama2-chinese:13b
+spring.ai.ollama.embedding.options.model=nomic-embed-text
