--- a/spring-boot-ai-mcpclient/src/main/resources/application.properties
+++ b/spring-boot-ai-mcpclient/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.ai.ollama.base-url=http://192.168.0.106:11434
 spring.ai.ollama.chat.model=llama3:8b
 spring.ai.ollama.chat.options.temperature=0.7
 
+spring.ai.openai.base-url=http://192.168.0.109:8000/v1
+spring.ai.openai.api-key=sk-pnzznkybdiprvfscekqoccptkvymvdmkypzjvvyigbnxcurv
+spring.ai.openai.chat.options.model=GLM-4-32B
+spring.ai.openai.chat.options.temperature=0.7
+spring.ai.openai.embedding.model=bge-m3
+
 # MCP\u5BA2\u6237\u7AEF\u7684\u914D\u7F6E
 spring.ai.mcp.client.name=mcp-client
 # \u8981\u8FDE\u63A5\u7684\u670D\u52A1\u5730\u5740
